--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 Ponemos en tus manos un CRM y una maravillosa App</string>
     <string name="botonizq">Me gusta</string>
     <string name="botonder">No me gusta</string>
+    <string name="segsegundoplano" />
 </resources>
