--- a/calculadora/src/main/res/values/strings.xml
+++ b/calculadora/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="resultado">=</string>
     <string name="decimal">.</string>
     <string name="pantallaresultado" />
+    <string name="cero">0</string>
 </resources>
