--- a/RestHelloWorld/src/main/res/values/strings.xml
+++ b/RestHelloWorld/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">resthelloworld</string>
+    <string name="Productos">Productos</string>
+    <string name="Pedidos">Pedidos</string>
+    <string name="Camareros">Camareros</string>
 </resources>
